; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_yabause.c_YabFlushBackups.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_yabause.c_YabFlushBackups.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BupRam = common dso_local global i64 0, align 8
@bupfilename = common dso_local global i64 0, align 8
@YAB_ERR_FILEWRITE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @YabFlushBackups() #0 {
  %1 = load i64, i64* @BupRam, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %14

3:                                                ; preds = %0
  %4 = load i64, i64* @BupRam, align 8
  %5 = load i64, i64* @bupfilename, align 8
  %6 = call i64 @T123Save(i64 %4, i32 65536, i32 1, i64 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %13

8:                                                ; preds = %3
  %9 = load i32, i32* @YAB_ERR_FILEWRITE, align 4
  %10 = load i64, i64* @bupfilename, align 8
  %11 = inttoptr i64 %10 to i8*
  %12 = call i32 @YabSetError(i32 %9, i8* %11)
  br label %13

13:                                               ; preds = %8, %3
  br label %14

14:                                               ; preds = %13, %0
  %15 = call i32 (...) @CartFlush()
  ret void
}

declare dso_local i64 @T123Save(i64, i32, i32, i64) #1

declare dso_local i32 @YabSetError(i32, i8*) #1

declare dso_local i32 @CartFlush(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
